<?xml version="1.0"?>
<package format="3">
  <name>oakd_pcloud</name>
  <version>0.0.1</version>
  <description>Ported oakd_pcloud package for ROS2</description>

  <maintainer email="h3ct0r@todo.todo">h3ct0r</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- DepthAI Dependencies -->
  <depend>depthai</depend>
  <depend>depthai_bridge</depend>
  <depend>depthai_ros_msgs</depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>camera_info_manager</depend>
  <depend>message_filters</depend>
  <depend>depthai</depend>
  <depend>depthai_bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>